2009-03-01 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iimporter.h (from_uri):
	Rename the API function to be consistant with NAIExporter interface.

	* src/core/na-iimporter.c:
	* src/io-xml/naxml-provider.c: Updated accordingly.

	* src/nact/nact-tree-model-dnd.c
	(nact_tree_model_dnd_imulti_drag_source_drag_data_get):
	Target folder is an URI.

	* src/nact/nact-main-menubar-tools.c:
	* src/nact/nact-main-menubar-tools.h: New files.

	* src/nact/nact-main-menubar-maintainer.c:
	* src/nact/nact-main-menubar-maintainer.h: New files.

	* src/nact/nact-main-menubar.c (on_update_sensitivities):
	Only paste a NAObjectItem into a menu.

	* src/nact/nact-main-menubar-help.c:
	* src/nact/nact-main-menubar-help.h: New files.

	* src/nact/Makefile.am:
	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-menubar.h: Updated accordingly.

	* src/core/na-updater.c:
	* src/core/na-updater.h (na_updater_append_item): New function.

	* src/nact/nact-main-menubar.c (save_item): Fix save machinery.

	* src/nact/nact-assistant-import.c
	(check_for_existance): Directly use the main window.

	* src/nact/nact-tree-model-dnd.c (drop_uri_list):
	Adapt to use na_importer_import_from_list() function.
	Display messages in a dialog box.
	Split the selection data on a '\r\n' separator.

	* src/api/na-iimporter.h (NAIImporterListParms): New structure.

	* src/core/na-importer.c:
	* src/core/na-importer.h (na_importer_import_from_list): New function.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c:
	* src/core/na-importer-ask.c:
	* src/core/na-importer-ask.h:
	* src/core/na-importer.c:
	* src/core/na-importer.h:
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-reader.h:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/test/test-reader.c:
	NAIImporterParms structure is renamed as NAIImporterUriParms.
	'item' member of this same structure is renamed as imported.

	* src/io-gconf/nagp-reader.c:
	* src/io-gconf/nagp-writer.c: